build script improvements, licenses