@@ -10,30 +10,31 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    platformLib
+}
+
 dependencies {
-    implementation project(":UIAPlatform")
+    compileOnly project(":UIAPlatform")
     testImplementation("junit:junit:4.13")
+
+    platformLib project(":UIAPlatform") // used to determine the ext dir where the UIAPlatform.jar is located
 }
 
-// TODO determine ext dir & lib via task outputs
-
-ext.defaultExtDir = "C:\\Users\\Christoph\\Tools\\jdk\\zulu8.54.0.21-ca-fx-jdk8.0.292-win_x64\\jre\\lib\\ext"
-ext.uiaPlatformDir = project.file("../UIAPlatform/build/libs")
-ext.uiaPlatformLib = project.file("../UIAPlatform.native/build/lib/main/debug/UIAPlatform.dll")
-
-application {
-    mainClass = "uia.sample.Simple"
-    applicationDefaultJvmArgs = [
-        "-Djava.ext.dirs=${defaultExtDir};${uiaPlatformDir}",
-        "-Duia.dll=${uiaPlatformLib}",
-        '-Dglass.platform=UIA',
-        '-Dglass.accessible.force=true'
-    ]
+import org.gradle.internal.jvm.Jvm
+def getJreExtDir() {
+    Jvm.current().jre.toPath().resolve('lib/ext')
+}
+def getPlatformExtPath() {
+    configurations.platformLib.files[0].parent
 }
 
-task fun {
-    doLast {
-        println project.file("../UIAPlatform/build/libs/UIAPlatform.jar")
-        println project.file("../UIAPlatform.native/build/libs/UIAPlatform.dll")
-    }
+task runWithPlatform(type: JavaExec) {
+	group = 'application'
+	description = 'Runs the sample with the glass platfrom configured'
+	classpath = sourceSets.main.runtimeClasspath
+	main = 'uia.sample.Simple'
+	systemProperty "java.ext.dirs", "${getJreExtDir()};${getPlatformExtPath()}"
+    systemProperty "glass.platform", "UIA"
+    systemProperty "glass.accessible.force", true
 }
